--- a/CustomBurnComplicatedUiOnPureWpf/Source/CustomBA/CustomBA.csproj
+++ b/CustomBurnComplicatedUiOnPureWpf/Source/CustomBA/CustomBA.csproj
@@ -56,6 +56,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\DelegateCommand.cs" />
+    <Compile Include="InstallState.cs" />
+    <Compile Include="MainWindowDataTemplateSelector.cs" />
     <Compile Include="Models\BootstrapperApplicationModel.cs" />
     <Compile Include="ViewModels\InstallViewModel.cs" />
     <Compile Include="Views\InstallView.xaml.cs">
