--- a/CustomBurnComplicatedUiOnPureWpf/Source/CustomBA/CustomBA.csproj
+++ b/CustomBurnComplicatedUiOnPureWpf/Source/CustomBA/CustomBA.csproj
@@ -8,7 +8,7 @@
     <OutputType>library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CustomBA</RootNamespace>
-    <AssemblyName>CustomBA</AssemblyName>
+    <AssemblyName>Burn.CustomBA</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -56,6 +56,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\DelegateCommand.cs" />
+    <Compile Include="Controls\HeaderPanel.xaml.cs">
+      <DependentUpon>HeaderPanel.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\InstallGreetingPage.xaml.cs">
+      <DependentUpon>InstallGreetingPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="InstallState.cs" />
     <Compile Include="MainWindowDataTemplateSelector.cs" />
     <Compile Include="Models\BootstrapperApplicationModel.cs" />
@@ -84,6 +90,14 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Content\Styles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\HeaderPanel.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\InstallGreetingPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -120,7 +134,7 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Content\Images\logo.jpg" />
+    <Resource Include="Content\Images\logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
