--- a/CustomBurnComplicatedUiOnPureWpf/Source/CustomBA/CustomBA.csproj
+++ b/CustomBurnComplicatedUiOnPureWpf/Source/CustomBA/CustomBA.csproj
@@ -136,6 +136,9 @@
   <ItemGroup>
     <Resource Include="Content\Images\logo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Content\Images\welcome.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
